vendor/bifrost/tls/bindings/ssl.odin


@(default_calling_convention="c")
foreign lib {
	// SSL_CTX_set_strict_cipher_list configures the cipher list for |ctx|,
	// evaluating |str| as a cipher string and returning error if |str| contains
	// anything meaningless. It returns one on success and zero on failure.
	SSL_CTX_set_strict_cipher_list :: proc(ctx: ^SSL_CTX, str: cstring) -> i32 ---

	// SSL_CTX_set_cipher_list configures the cipher list for |ctx|, evaluating
	// |str| as a cipher string. It returns one on success and zero on failure.
	//
	// Prefer to use |SSL_CTX_set_strict_cipher_list|. This function tolerates
	// garbage inputs, unless an empty cipher list results.
	SSL_CTX_set_cipher_list :: proc(ctx: ^SSL_CTX, str: cstring) -> i32 ---

	// SSL_set_strict_cipher_list configures the cipher list for |ssl|, evaluating
	// |str| as a cipher string and returning error if |str| contains anything
	// meaningless. It returns one on success and zero on failure.
	SSL_set_strict_cipher_list :: proc(ssl: ^SSL, str: cstring) -> i32 ---

	// SSL_set_cipher_list configures the cipher list for |ssl|, evaluating |str| as
	// a cipher string. It returns one on success and zero on failure.
	//
	// Prefer to use |SSL_set_strict_cipher_list|. This function tolerates garbage
	// inputs, unless an empty cipher list results.
	SSL_set_cipher_list :: proc(ssl: ^SSL, str: cstring) -> i32 ---

	// SSL_CTX_get_ciphers returns the cipher list for |ctx|, in order of
	// preference.
	SSL_CTX_get_ciphers :: proc(ctx: ^SSL_CTX) -> ^stack_st_SSL_CIPHER ---

	// SSL_CTX_cipher_in_group returns one if the |i|th cipher (see
	// |SSL_CTX_get_ciphers|) is in the same equipreference group as the one
	// following it and zero otherwise.
	SSL_CTX_cipher_in_group :: proc(ctx: ^SSL_CTX, i: c.size_t) -> i32 ---

	// SSL_get_ciphers returns the cipher list for |ssl|, in order of preference.
	SSL_get_ciphers :: proc(ssl: ^SSL) -> ^stack_st_SSL_CIPHER ---

	// SSL_is_init_finished returns one if |ssl| has completed its initial handshake
	// and has no pending handshake. It returns zero otherwise.
	SSL_is_init_finished :: proc(ssl: ^SSL) -> i32 ---

	// SSL_in_init returns one if |ssl| has a pending handshake and zero
	// otherwise.
	SSL_in_init :: proc(ssl: ^SSL) -> i32 ---

	// SSL_in_false_start returns one if |ssl| has a pending handshake that is in
	// False Start. |SSL_write| may be called at this point without waiting for the
	// peer, but |SSL_read| will complete the handshake before accepting application
	// data.
	//
	// See also |SSL_MODE_ENABLE_FALSE_START|.
	SSL_in_false_start :: proc(ssl: ^SSL) -> i32 ---

	// SSL_get_peer_certificate returns the peer's leaf certificate or NULL if the
	// peer did not use certificates. The caller must call |X509_free| on the
	// result to release it.
	SSL_get_peer_certificate :: proc(ssl: ^SSL) -> ^X509 ---

	// SSL_get_peer_cert_chain returns the peer's certificate chain or NULL if
	// unavailable or the peer did not use certificates. This is the unverified list
	// of certificates as sent by the peer, not the final chain built during
	// verification. The caller does not take ownership of the result.
	//
	// WARNING: This function behaves differently between client and server. If
	// |ssl| is a server, the returned chain does not include the leaf certificate.
	// If a client, it does.
	SSL_get_peer_cert_chain :: proc(ssl: ^SSL) -> ^stack_st_X509 ---

	// SSL_get_peer_full_cert_chain returns the peer's certificate chain, or NULL if
	// unavailable or the peer did not use certificates. This is the unverified list
	// of certificates as sent by the peer, not the final chain built during
	// verification. The caller does not take ownership of the result.
	//
	// This is the same as |SSL_get_peer_cert_chain| except that this function
	// always returns the full chain, i.e. the first element of the return value
	// (if any) will be the leaf certificate. In contrast, |SSL_get_peer_cert_chain|
	// returns only the intermediate certificates if the |ssl| is a server.
	SSL_get_peer_full_cert_chain :: proc(ssl: ^SSL) -> ^stack_st_X509 ---

	// SSL_get0_peer_certificates returns the peer's certificate chain, or NULL if
	// unavailable or the peer did not use certificates. This is the unverified list
	// of certificates as sent by the peer, not the final chain built during
	// verification. The caller does not take ownership of the result.
	//
	// This is the |CRYPTO_BUFFER| variant of |SSL_get_peer_full_cert_chain|.
	SSL_get0_peer_certificates :: proc(ssl: ^SSL) -> ^stack_st_CRYPTO_BUFFER ---

	// SSL_get0_signed_cert_timestamp_list sets |*out| and |*out_len| to point to
	// |*out_len| bytes of SCT information from the server. This is only valid if
	// |ssl| is a client. The SCT information is a SignedCertificateTimestampList
	// (including the two leading length bytes).
	// See https://tools.ietf.org/html/rfc6962#section-3.3
	// If no SCT was received then |*out_len| will be zero on return.
	//
	// WARNING: the returned data is not guaranteed to be well formed.
	SSL_get0_signed_cert_timestamp_list :: proc(ssl: ^SSL, out: ^^u8, out_len: ^c.size_t) ---

	// SSL_get0_ocsp_response sets |*out| and |*out_len| to point to |*out_len|
	// bytes of an OCSP response from the server. This is the DER encoding of an
	// OCSPResponse type as defined in RFC 2560.
	//
	// WARNING: the returned data is not guaranteed to be well formed.
	SSL_get0_ocsp_response :: proc(ssl: ^SSL, out: ^^u8, out_len: ^c.size_t) ---

	// SSL_get_tls_unique writes at most |max_out| bytes of the tls-unique value
	// for |ssl| to |out| and sets |*out_len| to the number of bytes written. It
	// returns one on success or zero on error. In general |max_out| should be at
	// least 12.
	//
	// This function will always fail if the initial handshake has not completed.
	// The tls-unique value will change after a renegotiation but, since
	// renegotiations can be initiated by the server at any point, the higher-level
	// protocol must either leave them disabled or define states in which the
	// tls-unique value can be read.
	//
	// The tls-unique value is defined by
	// https://tools.ietf.org/html/rfc5929#section-3.1. Due to a weakness in the
	// TLS protocol, tls-unique is broken for resumed connections unless the
	// Extended Master Secret extension is negotiated. Thus this function will
	// return zero if |ssl| performed session resumption unless EMS was used when
	// negotiating the original session.
	SSL_get_tls_unique :: proc(ssl: ^SSL, out: ^u8, out_len: ^c.size_t, max_out: c.size_t) -> i32 ---

	// SSL_get_extms_support returns one if the Extended Master Secret extension or
	// TLS 1.3 was negotiated. Otherwise, it returns zero.
	SSL_get_extms_support :: proc(ssl: ^SSL) -> i32 ---

	// SSL_get_current_cipher returns cipher suite used by |ssl|, or NULL if it has
	// not been negotiated yet.
	SSL_get_current_cipher :: proc(ssl: ^SSL) -> ^SSL_CIPHER ---

	// SSL_export_keying_material exports a connection-specific secret from |ssl|,
	// as specified in RFC 5705. It writes |out_len| bytes to |out| given a label
	// and optional context. If |use_context| is zero, the |context| parameter is
	// ignored.
	//
	// To derive the same value, both sides of a connection must use the same output
	// length, label, and context. In TLS 1.2 and earlier, using a zero-length
	// context and using no context would give different output. In TLS 1.3 and
	// later, the output length impacts the derivation, so a truncated longer export
	// will not match a shorter export.
	//
	// It returns one on success and zero otherwise.
	SSL_export_keying_material :: proc(ssl: ^SSL, out: ^u8, out_len: c.size_t, label: cstring, label_len: c.size_t, _context: ^u8, context_len: c.size_t, use_context: i32) -> i32 ---
	PEM_write_bio_SSL_SESSION  :: proc(bp: ^BIO, x: ^SSL_SESSION) -> i32 ---
	PEM_read_SSL_SESSION       :: proc(fp: ^FILE, x: ^^SSL_SESSION, cb: ^pem_password_cb, u: rawptr) -> ^SSL_SESSION ---
	PEM_write_SSL_SESSION      :: proc(fp: ^FILE, x: ^SSL_SESSION) -> i32 ---
	PEM_read_bio_SSL_SESSION   :: proc(bp: ^BIO, x: ^^SSL_SESSION, cb: ^pem_password_cb, u: rawptr) -> ^SSL_SESSION ---

	// SSL_SESSION_new returns a newly-allocated blank |SSL_SESSION| or NULL on
	// error. This may be useful when writing tests but should otherwise not be
	// used.
	SSL_SESSION_new :: proc(ctx: ^SSL_CTX) -> ^SSL_SESSION ---

	// SSL_SESSION_up_ref increments the reference count of |session| and returns
	// one.
	SSL_SESSION_up_ref :: proc(session: ^SSL_SESSION) -> i32 ---

	// SSL_SESSION_free decrements the reference count of |session|. If it reaches
	// zero, all data referenced by |session| and |session| itself are released.
	SSL_SESSION_free :: proc(session: ^SSL_SESSION) ---

	// SSL_SESSION_to_bytes serializes |in| into a newly allocated buffer and sets
	// |*out_data| to that buffer and |*out_len| to its length. The caller takes
	// ownership of the buffer and must call |OPENSSL_free| when done. It returns
	// one on success and zero on error.
	SSL_SESSION_to_bytes :: proc(_in: ^SSL_SESSION, out_data: ^^u8, out_len: ^c.size_t) -> i32 ---

	// SSL_SESSION_to_bytes_for_ticket serializes |in|, but excludes the session
	// identification information, namely the session ID and ticket.
	SSL_SESSION_to_bytes_for_ticket :: proc(_in: ^SSL_SESSION, out_data: ^^u8, out_len: ^c.size_t) -> i32 ---

	// SSL_SESSION_from_bytes parses |in_len| bytes from |in| as an SSL_SESSION. It
	// returns a newly-allocated |SSL_SESSION| on success or NULL on error.
	SSL_SESSION_from_bytes :: proc(_in: ^u8, in_len: c.size_t, ctx: ^SSL_CTX) -> ^SSL_SESSION ---

	// SSL_SESSION_get_version returns a string describing the TLS or DTLS version
	// |session| was established at. For example, "TLSv1.2" or "DTLSv1".
	SSL_SESSION_get_version :: proc(session: ^SSL_SESSION) -> cstring ---

	// SSL_SESSION_get_protocol_version returns the TLS or DTLS version |session|
	// was established at.
	SSL_SESSION_get_protocol_version :: proc(session: ^SSL_SESSION) -> u16 ---

	// SSL_SESSION_set_protocol_version sets |session|'s TLS or DTLS version to
	// |version|. This may be useful when writing tests but should otherwise not be
	// used. It returns one on success and zero on error.
	SSL_SESSION_set_protocol_version :: proc(session: ^SSL_SESSION, version: u16) -> i32 ---
}

// SSL_MAX_SSL_SESSION_ID_LENGTH is the maximum length of an SSL session ID.
SSL_MAX_SSL_SESSION_ID_LENGTH :: 32

@(default_calling_convention="c")
foreign lib {
	// SSL_SESSION_get_id returns a pointer to a buffer containing |session|'s
	// session ID and sets |*out_len| to its length.
	//
	// This function should only be used for implementing a TLS session cache. TLS
	// sessions are not suitable for application-level session state, and a session
	// ID is an implementation detail of the TLS resumption handshake mechanism. Not
	// all resumption flows use session IDs, and not all connections within an
	// application-level session will reuse TLS sessions.
	//
	// To determine if resumption occurred, use |SSL_session_reused| instead.
	// Comparing session IDs will not give the right result in all cases.
	//
	// As a workaround for some broken applications, BoringSSL sometimes synthesizes
	// arbitrary session IDs for non-ID-based sessions. This behavior may be
	// removed in the future.
	SSL_SESSION_get_id :: proc(session: ^SSL_SESSION, out_len: ^u32) -> ^u8 ---

	// SSL_SESSION_set1_id sets |session|'s session ID to |sid|, It returns one on
	// success and zero on error. This function may be useful in writing tests but
	// otherwise should not be used.
	SSL_SESSION_set1_id :: proc(session: ^SSL_SESSION, sid: ^u8, sid_len: c.size_t) -> i32 ---

	// SSL_SESSION_get_time returns the time at which |session| was established in
	// seconds since the UNIX epoch.
	SSL_SESSION_get_time :: proc(session: ^SSL_SESSION) -> u64 ---

	// SSL_SESSION_get_timeout returns the lifetime of |session| in seconds.
	SSL_SESSION_get_timeout :: proc(session: ^SSL_SESSION) -> u32 ---
